# MAF-A2A-NVIDIA-NemoAgents

./: .dockerignore  .env.example  .gitignore  AppHost.csproj  LICENSE  README.md  apphost.cs  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  requirements.txt
.github/: copilot-instructions.md
Properties/: launchSettings.json
docker/: otel-collector-config.yml
docs/: ARCHITECTURE-HIGHLIGHTS.md  CONFIGURATION.md  DEPLOYMENT.md  MANUAL-STARTUP.md  QUICK-START-DETAILS.md  README-ARCHITECTURE.md  TESTING.md
docs/promotional/: content-blog-hero.md  content-linkedin.md  content-repo-social.md  image-generation-status.md  prompts-blog-hero-16x9.md  prompts-linkedin-1x1.md  prompts-repo-social.md  social-media-content.md
scripts/: capture-media.cjs  check-port-conflicts.ps1  generate-t2i-images.ps1  run-all.ps1  stop-port-conflicts.ps1  test-image-endpoint.ps1  wait-services-ready.ps1
src/MafActionAgent/: Dockerfile  MafActionAgent.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/NemoDataAnalysisAgent/: Dockerfile  pyproject.toml
src/NemoDataAnalysisAgent/nemo/: requirements.txt  workflow-fast.yml  workflow.azure-openai.yml  workflow.yml
src/NemoDataAnalysisAgent/nemo/tools/: data_analysis.py
src/NemoDataAnalysisAgent/scripts/: run_agent.py
src/NemoDataAnalysisAgent/src/nemo_data_analysis_agent/: __init__.py  analysis_tools.py  register.py
src/Shared/: Models.cs  Shared.csproj
src/WebChatInterface/: Dockerfile  Program.cs  WebChatInterface.csproj
tests/playwright/: chat-chain.spec.ts  chat-latency.spec.ts
(+16 files in other folders)
